Done implementing login in build

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,32 +2,62 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+input {
+  border: 1px solid black;
+}
+.login_page_backDrop {
+  background-image: url("../libs/images/nextflixBackgroundImage.jpg");
+}
+.translate-100 {
+  transform: translateX(-55%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.navbar {
+  z-index: 99999999;
+}
+
+.search_menu {
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+.calc-100vh-minus-72px {
+  height: calc(100% - 72px);
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-1rem);
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.dot1 {
+  animation: bounce 0.6s infinite alternate;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.dot2 {
+  animation: bounce 0.6s infinite alternate 0.2s;
+}
+
+.dot3 {
+  animation: bounce 0.6s infinite alternate 0.4s;
+}
+.youtube_container > div {
+  height: 100%;
+}
+
+.carousel {
+  overflow: hidden;
+  position: relative;
+}
+.carousel-inner {
+  display: flex;
+  transition: transform 0.3s ease-in-out;
+}
+.carousel-item {
+  min-width: 100%;
 }
