--- a/pages/globals.css
+++ b/pages/globals.css
@@ -11,12 +11,23 @@ input {
   color: #ef4444;
 }
 
+.search_by_title {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .nav_kabab_menu {
   padding: 0.25rem 0.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
   border-radius: 9999px;
   cursor: pointer;
+}
+.nav_kabab_menu_button {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .navbar_tabs > button:hover {
