Done adding some css properties

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -11,6 +11,9 @@ input {
 .absolute {
   position: absolute;
 }
+.gap-1 {
+  gap: 0.25rem;
+}
 .logo_design {
   font-size: 34px;
   color: #ef4444;
