--- a/pages/globals.css
+++ b/pages/globals.css
@@ -14,6 +14,12 @@ input {
 .gap-1 {
   gap: 0.25rem;
 }
+.max-w-36 {
+  max-width: 9rem;
+}
+.max-w-full {
+  max-width: 100%;
+}
 .logo_design {
   font-size: 34px;
   color: #ef4444;
