--- a/pages/globals.css
+++ b/pages/globals.css
@@ -14,6 +14,12 @@ input {
 .gap-1 {
   gap: 0.25rem;
 }
+.w-6 {
+  width: 1.5rem;
+}
+.h-6 {
+  height: 1.5rem;
+}
 .max-w-36 {
   max-width: 9rem;
 }
