--- a/pages/globals.css
+++ b/pages/globals.css
@@ -71,6 +71,12 @@ input {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
+.w-20 {
+  width: 5rem;
+}
+.h-20 {
+  height: 5rem;
+}
 .w-6 {
   width: 1.5rem;
 }
