--- a/pages/globals.css
+++ b/pages/globals.css
@@ -74,6 +74,23 @@ input {
 .w-20 {
   width: 5rem;
 }
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.top-30 {
+  top: 7rem;
+}
+.right-10 {
+  right: 2.5rem;
+}
+.top-20 {
+  top: 5rem;
+}
 .h-20 {
   height: 5rem;
 }
