--- a/pages/globals.css
+++ b/pages/globals.css
@@ -11,6 +11,12 @@ input {
 .absolute {
   position: absolute;
 }
+.gap-3 {
+  gap: 0.75rem;
+}
+.items-end {
+  align-items: flex-end;
+}
 .whitespace-nowrap {
   white-space: nowrap;
 }
