--- a/pages/globals.css
+++ b/pages/globals.css
@@ -22,6 +22,12 @@ input {
 .image_animation:hover {
   transform: scale(1.1);
 }
+.w-16 {
+  width: 4rem;
+}
+.h-16 {
+  height: 4rem;
+}
 .items-end {
   align-items: flex-end;
 }
