--- a/pages/globals.css
+++ b/pages/globals.css
@@ -25,6 +25,25 @@ input {
 .w-16 {
   width: 4rem;
 }
+input:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
+input:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+    var(--tw-shadow, 0 0 #0000);
+}
+input:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+input:focus {
+  border-color: transparent;
+}
 .h-16 {
   height: 4rem;
 }
