input styles fixes

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -25,6 +25,10 @@ input {
 .w-16 {
   width: 4rem;
 }
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 input:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
